# pmresearch

./: README.md  pyproject.toml
src/pmresearch/: __init__.py  builder.py  filters.py  models.py  repositories.py  resolver.py  selector.py  temporary_balance_pnl.py
src/pmresearch/tag_analysis/: __init__.py  builder.py  metrics.py  models.py  plotting.py
tests/: helpers.py  test_context_builder.py  test_filters.py  test_market_stats_repo.py  test_metadata_repo.py  test_resolver.py  test_selector.py  test_tag_metrics_builder.py  test_tag_plotting.py  test_temporary_balance_pnl.py
