[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmresearch"
version = "0.1.0"
description = "Polymarket token analytics library"
requires-python = ">=3.10"
dependencies = [
    "clickhouse-connect>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pmresearch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
